users can now add other events

--- a/test/test123.html
+++ b/test/test123.html
@@ -10,6 +10,11 @@
     <div id="main-container">
         <input type="date" id="date-input"/>
         <input type="time" id="time-input"/>
+        <input type="checkbox" id="checkbox-input" name="sunday" value="true"/>
+        <label for="sunday" id="sundayT">S</label>
+                
+        <input type="checkbox" id="monday" name="monday" value="monday"/>
+        <label for="monday" id="mondayT">M</label>
     </div>
   </body>
 </html>
